<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0e2f56"
    android:gravity="center"
    android:orientation="vertical"

    android:paddingTop="@dimen/activity_vertical_margin"

    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"

        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/nick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:textSize="30dp"
        android:textAlignment="center"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/emaill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text="@string/nav_header_subtitle" />

    <android.widget.Button
        android:id="@+id/cpass"
        android:layout_width="203dp"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/lock"
        android:text="@string/cpass" />

    <android.widget.Button
        android:id="@+id/cname"
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/account"
        android:text="@string/cuname" />

    <android.widget.Button
        android:id="@+id/cadres"
        android:layout_width="203dp"
        android:drawableLeft="@mipmap/email"
        android:layout_height="wrap_content"
        android:text="@string/cemail" />

    <android.widget.Button
        android:id="@+id/vemail"
        android:layout_width="203dp"
        android:drawableLeft="@mipmap/verify"
        android:layout_height="wrap_content"
        android:text="@string/confirmemail" />

    <android.widget.Button
        android:id="@+id/logout"
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/logout"
        android:text="@string/logout" />
    <TableLayout
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/botnav5"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_gravity="bottom"
            android:theme="@style/Widget.MaterialComponents.BottomNavigationView"
            app:labelVisibilityMode="labeled"
            app:menu="@menu/bottom_nav" />
    </TableLayout>

</LinearLayout>
