<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mcakiroglu.sellout.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
    </fragment>


    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.mcakiroglu.sellout.fragments.ElektronikFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_elektronik" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.mcakiroglu.sellout.fragments.CepTelefonuFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_ceptelefonu" />

    <fragment
    android:id="@+id/nav_araba"
    android:name="com.mcakiroglu.sellout.fragments.ArabaFragment"
    android:label="@string/menu_araba"
    tools:layout="@layout/fragment_araba" />
    <fragment
        android:id="@+id/nav_ilan"
        android:name="com.mcakiroglu.sellout.fragments.MyStuff"
        android:label="İlanlarım"
        tools:layout="@layout/activity_my_stuff" />

    <fragment
    android:id="@+id/nav_mesaj"
    android:name="com.mcakiroglu.sellout.fragments.Messages"
    android:label="Mesajlarım"
    tools:layout="@layout/activity_messages" />

    <fragment
        android:id="@+id/nav_yeni"
        android:name="com.mcakiroglu.sellout.fragments.NewStuff"
        android:label="İlan Ver"
        tools:layout="@layout/activity_new_stuff" />

    <fragment
        android:id="@+id/nav_profil"
        android:name="com.mcakiroglu.sellout.fragments.Profile"
        android:label="Profil"
        tools:layout="@layout/activity_profile" />
</navigation>