<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:scrollIndicators="right"
    android:scrollbarStyle="insideOverlay"
    android:scrollbars="vertical">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".activities.MyStuff">

    <android.widget.Button
        android:id="@+id/geol"
       android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_xml_btn_yellow"
        android:text="@string/listnearby" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/beyaz"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/elektronik" />

    <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/recyclerView6"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_gravity="center"
android:layout_marginBottom="20dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp">

</androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/textViewcep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/beyaz"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/ceptelefonu" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView7"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/textViewaraba"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/beyaz"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/araba" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView8"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>
</ScrollView>