<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.DisplayStuff"
    android:background="@color/colorPrimary">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="150dp" />

        <android.widget.Button
            android:id="@+id/nexti"
            android:drawableLeft="@mipmap/skip"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/nextimg"
             />

        <TextView
            android:id="@+id/urunadi"
            android:layout_width="match_parent"
            android:textColor="@color/yellow"
            android:textAlignment="center"
            android:textSize="20dp"
            android:layout_height="30dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/ilantarihi"
            android:layout_width="match_parent"
            android:textColor="@color/yellow"
            android:textAlignment="center"
            android:textSize="20dp"
            android:layout_height="31dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/urunsahibi"
            android:layout_width="match_parent"
            android:textColor="@color/yellow"
            android:textSize="20dp"
            android:textAlignment="center"
            android:layout_height="39dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/aciklama"
            android:layout_width="match_parent"
            android:textColor="@color/yellow"
            android:textSize="20dp"
            android:textAlignment="center"
            android:layout_height="38dp"
            android:layout_marginBottom="50dp"
            android:text="TextView" />

        <android.widget.Button
            android:id="@+id/msend"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/email"
            android:text="@string/sendmsg" />

        <android.widget.Button
            android:id="@+id/markassold"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/check"

            android:text="@string/markas" />

        <android.widget.Button
            android:id="@+id/iptal"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/cancel"

            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>